<resources>
    <string name="app_name">OpenFloodAI</string>
    <string name="changeTheme">Change Theme</string>
    <string name="description">OpenFloodAI is an open-source project dedicated &amp; focused on research &amp; developing solutions for Flood related issues.</string>

    <!--Content Description for Accessibility support for visually impaired-->
    <string name="openFloodAi_social_handles_description">Social Handles of OpenFloodAi</string>
    <string name="twitter_button_description">Open Twitter Button</string>
    <string name="facebook_button_description">Open Facebook Button</string>
    <string name="linkedin_button_description">Open LinkedIn Button</string>
    <string name="devto_button_description">Open Dev.to Button</string>
    <string name="github_button_description">Open GitHub Button</string>
</resources>
