<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_large">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="start"
        android:letterSpacing="0.03"
        android:text="@string/app_name"
        android:textColor="?headerTextColor"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.01"
        android:text="@string/description"
        android:textColor="?headerTextColor"
        android:textSize="@dimen/text_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/openFloodAi_social_handles_description"
        android:gravity="start"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding_large">

        <FrameLayout
            android:id="@+id/twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/footer_icon"
                android:contentDescription="@string/twitter_button_description"
                android:onClick="openTwitter"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/ic_twitter" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/footer_icon"
                android:contentDescription="@string/facebook_button_description"
                android:onClick="openFacebook"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/ic_facebook" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/footer_icon"
                android:contentDescription="@string/linkedin_button_description"
                android:onClick="openLinkedIn"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/ic_linkedin" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/devto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/footer_icon"
                android:contentDescription="@string/devto_button_description"
                android:onClick="openDevto"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/ic_devto" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/github"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_normal">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:background="@drawable/footer_icon"
                android:contentDescription="@string/github_button_description"
                android:onClick="openGithub"
                android:padding="@dimen/padding_normal"
                android:src="@drawable/ic_github" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>